--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/genai": "^1.24.0",
+    "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
